# cardgame

./: .appveyor.yml  .clang-format  .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  drone.io  googletest.in
.github/workflows/: cpp.yml
app/: CMakeLists.txt
card/: CMakeLists.txt
cardapp/: CMakeLists.txt
cardapp/src/: main.cpp
cmake/: CardConfig.cmake.in
docker/: Dockerfile  README.md
libCard/: CMakeLists.txt
libCard/include/card/: ressource.hpp
libCard/src/: deck.cpp
libCard/test/: CMakeLists.txt
libcard/: CMakeLists.txt
libcard/include/card/: board.hpp  card.hpp  deck.hpp  player.hpp  ressource.hpp
libcard/src/: board.cpp  card.cpp  deck.cpp  player.cpp
libcard/test/: CMakeLists.txt
libcard/test/src/: main.cpp  player_test.hpp
